add lepton camera streaming but still have timeout error

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,10 @@
         <div class="container mx-auto">
             <div class="flex items-stretch">
                 <div class="w-1/2 m-8">
-                    <img class="w-full" src="{{ url_for('video_feed') }}"/>
+                    <img class="w-full" src="{{ url_for('picamera_feed') }}"/>
                     <!-- For no webcam dev -->
                     <!-- <img src="public/sample-capture-for-dev.jpg" /> -->
+                    <img class="w-full" src="{{ url_for('lepton_feed') }}"/>
                 </div>
                 <div class="w-1/2 m-8">
                     <img class="w-4/5" src="public/braindynamics-logo.png" />
