--- a/templates/index.html
+++ b/templates/index.html
@@ -9,43 +9,14 @@
 </head>
 
 <body>
-    <div class="w-screen h-screen bg-gray-200 p-10">
-        <div class="container mx-auto">
-            <div class="flex items-stretch">
-                <div class="w-1/2 m-8">
-                    <img class="w-full" src="{{ url_for('picamera_feed') }}"/>
-                    <!-- For no webcam dev -->
-                    <!-- <img src="public/sample-capture-for-dev.jpg" /> -->
-                </div>
-                <div class="w-1/2 m-8">
-                    <img class="w-4/5" src="public/braindynamics-logo.png" />
-                    <!-- replace form with div prevent some default behaviour of page refreshing -->
-                    <div class="w-full flex my-8">
-                        <div class="w-1/5">
-                            <label class="block text-gray-700 font-bold text-xl"
-                                for="inline-full-name">
-                                Name
-                            </label>
-                        </div>
-                        <div class="w-3/5 mx-4">
-                            <input
-                                class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-                                id="username" type="text" value="Noppasit">
-                        </div>
-                        <div class="w-1/5">
-                            <button class="bg-gray-400 hover:bg-gray-500 text-gray-800 rounded font-bold py-2 px-4 mx-auto"
-                                onclick="httpGet('/capture')">Capture</button>
-                        </div>
-                    </div>
-                    <div class="my-8 h-full">
-                        <h3 class="text-xl font-bold text-gray-700 my-4">Logging</h3>
-                        <div id="resultBox" class="h-full bg-white rounded p-6">
-                            <p>Wait for the result here</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="relative w-screen h-screen">
+        <!-- <img class="w-full" src="{{ url_for('picamera_feed') }}"/> -->
+        <!-- For no webcam dev -->
+        <div class="w-full p-1 text-center bg-green-400 opacity-75">
+            <h1 class="text-4xl text-white font-bold">36.4</h1>
         </div>
+        <img class="absolute w-full h-full inset-0" style="z-index: -1" src="public/sample-capture-for-dev.jpg" />
+        <img class="absolute right-0 bottom-0 w-1/3 h-1/3 p-10" src="public/sample-thermal-for-dev.jpg" />
     </div>
 </body>
 
