--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,26 @@
 </head>
 
 <body>
-    <div class="relative w-screen h-screen">
+    <div class="w-screen h-screen">
         <!-- <img class="w-full" src="{{ url_for('picamera_feed') }}"/> -->
         <!-- For no webcam dev -->
         <div class="w-full p-1 text-center bg-green-400 opacity-75">
-            <h1 class="text-4xl text-white font-bold">36.4</h1>
+            <h1 id="temperatureText" class="text-4xl text-white font-bold">Temperature</h1>
         </div>
-        <img class="absolute w-full h-full inset-0" style="z-index: -1" src="public/sample-capture-for-dev.jpg" />
-        <img class="absolute right-0 bottom-0 w-1/3 h-1/3 p-10" src="public/sample-thermal-for-dev.jpg" />
+        <!--<img class="absolute w-full h-full inset-0" style="z-index: -1" src="public/sample-capture-for-dev.jpg" />-->
+        <div class="flex">
+            <img class="w-1/2" style="z-index: -1" src="{{ url_for('picamera_feed') }}"/>
+            <div id="img_placeholder" class="w-1/2 flex items-center flex-stretch text-center bg-gray-800">
+                <div class="text-center">
+                    <h1 id="img_placeholder_text" class="text-2xl text-white font-bold">Press Capture to Start</h1>
+                </div>
+            </div>
+            <img id="thermal_image" class="w-1/2 bg-gray-800 hidden" src="" alt="thermal capture"/>
+        </div>
+        <div class="flex my-4 ">
+            <button class="bg-gray-400 hover:bg-gray-500 text-gray-800 rounded font-bold w-1/5 py-2 px-4 mx-auto"
+                onclick="getCaptureThermal('/capture_thermal')">Capture</button>
+        </div>
     </div>
 </body>
 
